fixed minor errors

--- a/WebPlatform/Frontend/my-app/src/components/ContextMenu.css
+++ b/WebPlatform/Frontend/my-app/src/components/ContextMenu.css
@@ -19,3 +19,9 @@
 .context-menu-item:hover {
     background-color: #f0f0f0;
 }
+
+.disabled {
+    color: rgb(128, 128, 128);
+    cursor: not-allowed;
+    pointer-events: none;
+}
